--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port=8088
-spring.datasource.url=jdbc:mysql://localhost:3306/vehiculos
+server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3306/parcial
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=1234
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
